📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -4510,5 +4510,173 @@
         "published": "Tue, 09 Dec 2025 17:11:09 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46207505\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/09/three-in-ten-u-s-teens-use-ai-chatbots-every-day-but-safety-concerns-are-growing/",
+        "title": "Three in ten U.S. teens use AI chatbots every day, but safety concerns are growing",
+        "link": "https://techcrunch.com/2025/12/09/three-in-ten-u-s-teens-use-ai-chatbots-every-day-but-safety-concerns-are-growing/",
+        "published": "Tue, 09 Dec 2025 20:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "While teenagers may start out using AI chatbots for basic questions, their relationship with chatbot platforms has the potential to turn addictive."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/09/slack-ceo-denise-dresser-to-join-openai-as-chief-revenue-officer/",
+        "title": "Slack CEO Denise Dresser to join OpenAI as chief revenue officer",
+        "link": "https://techcrunch.com/2025/12/09/slack-ceo-denise-dresser-to-join-openai-as-chief-revenue-officer/",
+        "published": "Tue, 09 Dec 2025 19:41:40 +0000",
+        "source": "TechCrunch",
+        "summary": "OpenAI says that Dresser will be responsible for the company's revenue strategy in enterprise and customer success."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/09/boom-supersonic-raises-300m-to-build-natural-gas-turbines-for-crusoe-data-centers/",
+        "title": "Boom Supersonic raises $300M to build natural gas turbines for Crusoe data centers",
+        "link": "https://techcrunch.com/2025/12/09/boom-supersonic-raises-300m-to-build-natural-gas-turbines-for-crusoe-data-centers/",
+        "published": "Tue, 09 Dec 2025 19:17:41 +0000",
+        "source": "TechCrunch",
+        "summary": "Crusoe will pay Boom $1.25 billion for more than a gigawatt of generating capacity with deliveries of the turbines starting in 2027."
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/841059/apple-airpods-pro-3-silent-hill-f-deal-sale",
+        "title": "The AirPods Pro 3 are back to their lowest price ahead of the holidays",
+        "link": "https://www.theverge.com/gadgets/841059/apple-airpods-pro-3-silent-hill-f-deal-sale",
+        "published": "2025-12-09T14:59:10-05:00",
+        "source": "The Verge",
+        "summary": "If you didn\u2019t catch the Black Friday deal on Apple\u2019s AirPods Pro 3, the good news is the price has dropped again ahead of the holidays. Right now, the noise-canceling earbuds are matching their all-time low price of $219.99 ($30 off) at Amazon, Walmart, and Best Buy. It\u2019s a great deal considering the AirPods Pro [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/841072/google-pixel-9a-pixel-watch-4-holiday-gifts-deal-sale",
+        "title": "Google brings back Black Friday prices for earbuds, phones, and more",
+        "link": "https://www.theverge.com/gadgets/841072/google-pixel-9a-pixel-watch-4-holiday-gifts-deal-sale",
+        "published": "2025-12-09T14:47:46-05:00",
+        "source": "The Verge",
+        "summary": "Google just launched its holiday sale, and it\u2019s basically Black Friday and Cyber Monday revived. From smartphones to smart security devices, plenty of great gifts have returned to their Black Friday prices, with some third-party retailers in some cases offering better deals than Google. Prices for a few of our favorite gadgets are even matching [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/ai-artificial-intelligence/840190/redfin-ai-search-chatbot",
+        "title": "I\u2019m obsessed with Redfin\u2019s AI search",
+        "link": "https://www.theverge.com/ai-artificial-intelligence/840190/redfin-ai-search-chatbot",
+        "published": "2025-12-09T14:15:00-05:00",
+        "source": "The Verge",
+        "summary": "Look, I'm as fed up as the next guy with AI chatbots stuffed into every app. I don't want to brainstorm coverage options with an LLM every time I renew my car insurance. I'd much rather message a human than a robot to pester FedEx about my missing package. But I have found one scenario [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/best-tv-shows-hulu-this-week/",
+        "title": "The 51 Best Shows on Hulu, WIRED\u2019s Picks (December 2025)",
+        "link": "https://www.wired.com/story/best-tv-shows-hulu-this-week/",
+        "published": "Tue, 09 Dec 2025 20:00:00 +0000",
+        "source": "WIRED",
+        "summary": "To Cook a Bear, The Manipulated, and Chris Hemsworth: A Road Trip to Remember are just a few of the shows you should be watching on Hulu this month."
+    },
+    {
+        "id": "https://arstechnica.com/tech-policy/2025/12/supreme-court-appears-likely-to-approve-trumps-firing-of-ftc-democrat/",
+        "title": "Supreme Court appears likely to approve Trump\u2019s firing of FTC Democrat",
+        "link": "https://arstechnica.com/tech-policy/2025/12/supreme-court-appears-likely-to-approve-trumps-firing-of-ftc-democrat/",
+        "published": "Tue, 09 Dec 2025 18:53:21 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Conservative justices seem ready to back Trump control of independent agencies."
+    },
+    {
+        "id": "https://arstechnica.com/space/2025/12/lunar-outpost-rover-to-study-lunar-dust-alongside-artemis-astronauts-on-moon/",
+        "title": "NASA astronauts will have their own droid when they go back to the Moon",
+        "link": "https://arstechnica.com/space/2025/12/lunar-outpost-rover-to-study-lunar-dust-alongside-artemis-astronauts-on-moon/",
+        "published": "Tue, 09 Dec 2025 18:09:05 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "NASA crew will be the first astronauts to work with a robot on a celestial body other than Earth."
+    },
+    {
+        "id": "https://www.engadget.com/the-best-subscription-box-gifts-for-2025-130037236.html?src=rss",
+        "title": "The best subscription box gifts for 2025",
+        "link": "https://www.engadget.com/the-best-subscription-box-gifts-for-2025-130037236.html?src=rss",
+        "published": "Tue, 09 Dec 2025 20:01:26 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>The best gifts inspire joy long after the initial unwrapping. Subscription boxes are designed to show up again and again, each time offering something new to try, build or taste. They\u2019re perfect for friends who already have too much gear or relatives who like to discover things without searching for them. From electronics kits and mystery puzzles to Japanese treats and fresh coffee, these boxes make each month feel like a small celebration. You pick the vibe, the plan and the recipient gets a"
+    },
+    {
+        "id": "https://www.engadget.com/ai/nearly-one-third-of-teens-use-ai-chatbots-daily-200000888.html?src=rss",
+        "title": "Nearly one-third of teens use AI chatbots daily",
+        "link": "https://www.engadget.com/ai/nearly-one-third-of-teens-use-ai-chatbots-daily-200000888.html?src=rss",
+        "published": "Tue, 09 Dec 2025 20:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>AI chatbots haven't come close to replacing teens' social media habits, but they are playing a significant role in their online habits. Nearly one-third of US teens report using AI chatbots daily or more, according to a new report from Pew Research.&nbsp;</p><p>The report is the first from Pew to specifically examine how often teens are using AI overall, and was published alongside its latest research on teens' social media use. It's based on an online survey of 1,458 US teens who were polled"
+    },
+    {
+        "id": "https://www.engadget.com/science/space/the-webb-telescope-spots-a-supernova-from-13-billion-years-ago-194327489.html?src=rss",
+        "title": "The Webb telescope spots a supernova from 13 billion years ago",
+        "link": "https://www.engadget.com/science/space/the-webb-telescope-spots-a-supernova-from-13-billion-years-ago-194327489.html?src=rss",
+        "published": "Tue, 09 Dec 2025 19:43:27 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>The James Webb Space Telescope and other international observatories have spotted a 13-billion-year-old supernova. On Tuesday, the European Space Agency (ESA) <a class=\"link\" href=\"https://esawebb.org/news/weic2523/?lang\" target=\"_blank\">announced</a> the sighting of a gamma-ray burst from a star that exploded when the Universe was only 730 million years old. The Webb telescope even detected the supernova's host galaxy. </p><p>Before this observation, the oldest recorded supernova was from wh"
+    },
+    {
+        "id": "https://www.engadget.com/mobile/smartphones/samsung-wallet-to-gain-support-for-digital-porsche-keys-193000085.html?src=rss",
+        "title": "Samsung Wallet to gain support for digital Porsche keys",
+        "link": "https://www.engadget.com/mobile/smartphones/samsung-wallet-to-gain-support-for-digital-porsche-keys-193000085.html?src=rss",
+        "published": "Tue, 09 Dec 2025 19:30:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Owners of the <a class=\"link\" href=\"https://www.engadget.com/transportation/evs/2025-porsche-macan-electric-review-the-obvious-choice-when-the-budget-allows-140000851.html\" target=\"_blank\">Porsche Macan</a> and upcoming <a class=\"link\" href=\"https://www.engadget.com/transportation/evs/porsche-has-electrified-the-cayenne-and-its-a-beast-163443958.html\" target=\"_blank\">Porsche Cayenne Electric</a> will be able to unlock and start their cars with their Galaxy phones, <a class=\"link\" href=\"https:"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/playstation/playstations-2025-wrap-up-is-here-so-you-can-see-how-many-hours-youve-sunk-into-death-stranding-2-191508693.html?src=rss",
+        "title": "PlayStation's 2025 Wrap-Up is here, so you can see how many hours you've sunk into Death Stranding 2",
+        "link": "https://www.engadget.com/gaming/playstation/playstations-2025-wrap-up-is-here-so-you-can-see-how-many-hours-youve-sunk-into-death-stranding-2-191508693.html?src=rss",
+        "published": "Tue, 09 Dec 2025 19:15:08 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Sony's 2025 PlayStation Wrap-Up <a href=\"https://blog.playstation.com/2025/12/09/playstation-2025-wrap-up-launches-starting-today-explore-your-personalized-gaming-recap-for-2025/\">is now available</a>. The recap, which is similar to those from music streaming services, sums up gaming habits from throughout the year. It shows players how many hours they used their PS4 or PS5, what games they played the most, preferred genres, trophy counts and more.</p>\n<p>These digital cards are shareable on "
+    },
+    {
+        "id": "https://gizmodo.com/glenn-beck-is-giving-american-history-the-grokipedia-treatment-2000697382",
+        "title": "Glenn Beck Is Giving American History the Grokipedia Treatment",
+        "link": "https://gizmodo.com/glenn-beck-is-giving-american-history-the-grokipedia-treatment-2000697382",
+        "published": "Tue, 09 Dec 2025 20:05:21 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Glenn Beck&#039;s AI George Washington in a preview clip for an &quot;interview&quot; published Dec. 8, 2025.\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/george-washington-AI-glenn-beck.jpg\" width=\"1920\" /><br /><br />\"This is not ChatGPT. This is not Wikipedia. This is verified, factual, memorized, first source truth.\""
+    },
+    {
+        "id": "https://gizmodo.com/youre-going-to-need-a-bigger-wallet-to-afford-these-rare-jaws-props-2000697409",
+        "title": "You\u2019re Going to Need a Bigger Wallet to Afford These Rare \u2018Jaws\u2019 Props",
+        "link": "https://gizmodo.com/youre-going-to-need-a-bigger-wallet-to-afford-these-rare-jaws-props-2000697409",
+        "published": "Tue, 09 Dec 2025 20:00:29 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Quintrod\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/QuintRod.jpg\" width=\"1920\" /><br /><br />Two sought-after items that are not in the Academy Museum's huge exhibit paying tribute to the Spielberg classic are going up for auction."
+    },
+    {
+        "id": "https://gizmodo.com/fiat-will-sell-tiny-ev-in-the-u-s-with-a-28-mph-top-speed-2000697415",
+        "title": "Fiat Will Sell Tiny EV in the U.S. With a 28 MPH Top Speed",
+        "link": "https://gizmodo.com/fiat-will-sell-tiny-ev-in-the-u-s-with-a-28-mph-top-speed-2000697415",
+        "published": "Tue, 09 Dec 2025 19:40:44 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Fiat Topolino\" class=\"attachment-full size-full wp-post-image\" height=\"1000\" src=\"https://gizmodo.com/app/uploads/2025/12/fiat_topolino.jpg\" width=\"1500\" /><br /><br />It's morning in America for cute little cars that Americans have historically rejected."
+    },
+    {
+        "id": "https://www.zdnet.com/article/google-pixel-watch-double-pinch-hand-gestures-new-features/",
+        "title": "How Google's new Pixel Watch update takes aim at Apple Watch",
+        "link": "https://www.zdnet.com/article/google-pixel-watch-double-pinch-hand-gestures-new-features/",
+        "published": "Tue, 09 Dec 2025 19:51:00 GMT",
+        "source": "Latest news",
+        "summary": "Pixel Watch 4 is getting gestures like double pinch and wrist turn - two features already included on Apple Watches - to dismiss calls, snooze alarms, and select smart replies."
+    },
+    {
+        "id": "https://www.zdnet.com/article/anthropic-openai-enterprise-market-share-2025/",
+        "title": "While Google and OpenAI battle for model dominance, Anthropic is quietly winning the enterprise AI race",
+        "link": "https://www.zdnet.com/article/anthropic-openai-enterprise-market-share-2025/",
+        "published": "Tue, 09 Dec 2025 19:45:00 GMT",
+        "source": "Latest news",
+        "summary": "A survey by venture capital firm Menlo Ventures also finds that agentic AI is still a niche."
+    },
+    {
+        "id": "https://www.zdnet.com/article/apple-airpods-pro-3-vs-samsung-galaxy-buds-3-pro/",
+        "title": "Apple AirPods Pro 3 vs. Samsung Galaxy Buds 3 Pro: I listened to both models, here's who wins",
+        "link": "https://www.zdnet.com/article/apple-airpods-pro-3-vs-samsung-galaxy-buds-3-pro/",
+        "published": "Tue, 09 Dec 2025 18:47:00 GMT",
+        "source": "Latest news",
+        "summary": "It's a battle of ecosystems - but is one truly better? Here's my buying advice after testing both for a month."
+    },
+    {
+        "id": "https://letsencrypt.org/2025/12/09/10-years",
+        "title": "10 Years of Let's Encrypt",
+        "link": "https://letsencrypt.org/2025/12/09/10-years",
+        "published": "Tue, 09 Dec 2025 18:54:55 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46208962\">Comments</a>"
     }
 ]
