📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -4678,5 +4678,101 @@
         "published": "Tue, 09 Dec 2025 18:54:55 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46208962\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/09/why-cursors-ceo-believes-openai-anthropic-competition-wont-crush-his-startup/",
+        "title": "Why Cursor\u2019s CEO believes OpenAI, Anthropic competition won\u2019t crush his startup",
+        "link": "https://techcrunch.com/2025/12/09/why-cursors-ceo-believes-openai-anthropic-competition-wont-crush-his-startup/",
+        "published": "Tue, 09 Dec 2025 20:59:21 +0000",
+        "source": "TechCrunch",
+        "summary": "After reaching $1 billion in annualized revenue, Anysphere CEO Michael Truell explained the features his company is focused on building out."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/09/rivian-is-building-its-own-ai-assistant/",
+        "title": "Rivian is building its own AI assistant",
+        "link": "https://techcrunch.com/2025/12/09/rivian-is-building-its-own-ai-assistant/",
+        "published": "Tue, 09 Dec 2025 20:11:13 +0000",
+        "source": "TechCrunch",
+        "summary": "The EV maker will likely share more details on its upcoming AI &#038; Autonomy Day scheduled for December 11."
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/780844/best-gifts-under-25-2025",
+        "title": "Some of our favorite gifts will cost you less than $25",
+        "link": "https://www.theverge.com/gadgets/780844/best-gifts-under-25-2025",
+        "published": "2025-12-09T16:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Holiday shopping on a budget can feel constricting, especially if you've been invited to a white elephant or need a last-minute stocking stuffer. The good news is that, with this guide, you can leave that stress behind. Whether you're aiming for something practical or fun, we've found plenty of great gifts for under $25 - [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/entertainment/840977/wake-up-dead-man-review-netflix-knives-out",
+        "title": "Wake Up Dead Man digs deep for a darker, more powerful Knives Out",
+        "link": "https://www.theverge.com/entertainment/840977/wake-up-dead-man-review-netflix-knives-out",
+        "published": "2025-12-09T15:15:00-05:00",
+        "source": "The Verge",
+        "summary": "Over two films, Rian Johnson's Knives Out series has offered something largely absent from the modern movie landscape: intricate murder mysteries full of humor and gasp-worthy moments. The original Knives Out started things off relatively small with a cozy whodunit, which then became a larger and more elaborate puzzle with the sequel Glass Onion. Both [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/how-to-watch-the-game-awards-2025-on-december-11-205500124.html?src=rss",
+        "title": "How to watch The Game Awards 2025 on December 11",
+        "link": "https://www.engadget.com/gaming/how-to-watch-the-game-awards-2025-on-december-11-205500124.html?src=rss",
+        "published": "Tue, 09 Dec 2025 20:55:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>The Game Awards are this week, with the grand showcase for 2025 coming up on Thursday, December 11 at 8PM ET. There's also a pre-show (in case the multi-hour affair just isn't enough TGA for you) and that kicks off at 7:30PM ET. The ceremony will be a mix of honoring games from the past year and debuting trailers for future releases, so expect a couple interesting announcements to emerge from Thursday night. <em>Engadget</em> will be reporting on any big stories as they happen at The Game Awa"
+    },
+    {
+        "id": "https://www.engadget.com/home/kitchen-tech/traeger-debuts-woodridge-pro-plus-grill-with-wi-fi-features-and-built-in-storage-cabinet-205320548.html?src=rss",
+        "title": "Traeger debuts Woodridge Pro Plus grill with Wi-Fi features and built-in storage cabinet",
+        "link": "https://www.engadget.com/home/kitchen-tech/traeger-debuts-woodridge-pro-plus-grill-with-wi-fi-features-and-built-in-storage-cabinet-205320548.html?src=rss",
+        "published": "Tue, 09 Dec 2025 20:53:20 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Traeger <a class=\"link\" href=\"https://www.engadget.com/home/kitchen-tech/traeger-woodridge-review-a-big-upgrade-for-the-entry-level-pellet-grill-160010591.html\" target=\"_blank\">debuted its Woodridge line</a> of Wi-Fi-enabled pellet grills back in January. The overall theme across the Woodridge, Woodridge Pro and Woodridge Elite is the company\u2019s reliable performance and features are available for less than the cost of its most premium models. Just before Christmas, the company is adding to the"
+    },
+    {
+        "id": "https://gizmodo.com/dc-superman-spider-man-1-covers-2000697425",
+        "title": "Superman and Spider-Man Collide in the First Looks at DC and Marvel\u2019s Next Big Crossover",
+        "link": "https://gizmodo.com/dc-superman-spider-man-1-covers-2000697425",
+        "published": "Tue, 09 Dec 2025 21:00:43 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Dc Superman Spider Man 1\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/DC-Superman-Spider-Man-1.jpg\" width=\"1920\" /><br /><br />It's out March 25, 2026, and there are 11 covers in total by the likes of Jim Lee, Jorge Jim\u00e9nez, and more."
+    },
+    {
+        "id": "https://gizmodo.com/garlic-mouth-wash-the-science-says-yes-2000697393",
+        "title": "Garlic Mouth Wash? The Science Says Yes",
+        "link": "https://gizmodo.com/garlic-mouth-wash-the-science-says-yes-2000697393",
+        "published": "Tue, 09 Dec 2025 20:25:48 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Mouth Wash And Garlic\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/mouth-wash-and-garlic.jpg\" width=\"1920\" /><br /><br />Researchers reviewed existing evidence on whether mouthwash with garlic extract could be a viable alternative for the current golden standard."
+    },
+    {
+        "id": "https://mashable.com/article/how-to-watch-one-battle-after-another",
+        "title": "How to watch One Battle After Another: Streaming details for the Oscar frontrunner",
+        "link": "https://mashable.com/article/how-to-watch-one-battle-after-another",
+        "published": "Tue, 09 Dec 2025 20:41:35 +0000",
+        "source": "Mashable",
+        "summary": "Is \"One Battle After Another\" streaming yet? Find out how to watch the Leonardo DiCaprio movie at home."
+    },
+    {
+        "id": "https://mashable.com/article/ice-block-app-trump-administration-lawsuit",
+        "title": "ICEBlock app developers sue Trump administration",
+        "link": "https://mashable.com/article/ice-block-app-trump-administration-lawsuit",
+        "published": "Tue, 09 Dec 2025 20:41:02 +0000",
+        "source": "Mashable",
+        "summary": "App developers argue that the White House's pressure campaign to get Apple and Google to remove ICE trackers amounts to a first amendment violation."
+    },
+    {
+        "id": "https://www.zdnet.com/article/android-xr-smart-glasses-hands-on-xreal-samsung/",
+        "title": "I wore Google's upcoming Android XR smart glasses, and it's a future I'd actually want to live in",
+        "link": "https://www.zdnet.com/article/android-xr-smart-glasses-hands-on-xreal-samsung/",
+        "published": "Tue, 09 Dec 2025 20:53:00 GMT",
+        "source": "Latest news",
+        "summary": "From multimodal AI glasses to immersive headsets, Google's Android XR vision is more ambitious - yet clearer - than ever."
+    },
+    {
+        "id": "https://www.zdnet.com/article/acer-veriton-nuc-ai-pc-review/",
+        "title": "Should you switch to a mini PC? Testing this Acer model made the choice obvious to me",
+        "link": "https://www.zdnet.com/article/acer-veriton-nuc-ai-pc-review/",
+        "published": "Tue, 09 Dec 2025 20:35:00 GMT",
+        "source": "Latest news",
+        "summary": "Acer's Veriton NUC AI is a compact Windows PC with a wide selection of ports, and a portable form factor."
     }
 ]
