📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -4774,5 +4774,77 @@
         "published": "Tue, 09 Dec 2025 20:35:00 GMT",
         "source": "Latest news",
         "summary": "Acer's Veriton NUC AI is a compact Windows PC with a wide selection of ports, and a portable form factor."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/09/spacex-reportedly-planning-2026-ipo-with-1-5t-valuation-target/",
+        "title": "SpaceX reportedly planning 2026 IPO with $1.5T valuation target",
+        "link": "https://techcrunch.com/2025/12/09/spacex-reportedly-planning-2026-ipo-with-1-5t-valuation-target/",
+        "published": "Tue, 09 Dec 2025 21:27:54 +0000",
+        "source": "TechCrunch",
+        "summary": "The company is looking to raise $30 billion, which would make it the biggest IPO ever, just ahead of Saudi Aramco's in 2019."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/09/b-capital-founding-partner-kabir-narang-leaves-to-launch-new-investment-platform/",
+        "title": "B Capital founding partner Kabir Narang leaves to launch new investment platform",
+        "link": "https://techcrunch.com/2025/12/09/b-capital-founding-partner-kabir-narang-leaves-to-launch-new-investment-platform/",
+        "published": "Tue, 09 Dec 2025 21:13:19 +0000",
+        "source": "TechCrunch",
+        "summary": "Kabir Narang is laying the groundwork for a new investment platform slated for 2026 that will focus on \"compounding at the intersection of technology, AI, and global capital flows.\""
+    },
+    {
+        "id": "https://arstechnica.com/ai/2025/12/big-tech-joins-forces-with-linux-foundation-to-standardize-ai-agents/",
+        "title": "Big Tech joins forces with Linux Foundation to standardize AI agents",
+        "link": "https://arstechnica.com/ai/2025/12/big-tech-joins-forces-with-linux-foundation-to-standardize-ai-agents/",
+        "published": "Tue, 09 Dec 2025 21:08:11 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "The Agentic AI Foundation launches to support MCP, AGENTS.md, and goose."
+    },
+    {
+        "id": "https://www.engadget.com/transportation/uber-is-installing-kiosks-for-booking-rides-without-the-mobile-app-220904106.html?src=rss",
+        "title": "Uber is installing kiosks for booking rides without the mobile app",
+        "link": "https://www.engadget.com/transportation/uber-is-installing-kiosks-for-booking-rides-without-the-mobile-app-220904106.html?src=rss",
+        "published": "Tue, 09 Dec 2025 22:09:04 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Uber is rolling out <a class=\"link\" href=\"https://www.uber.com/newsroom/help-for-the-holidays/\" target=\"_blank\">kiosks</a> for travelers to book rideshares without using the mobile app. The company is pitching the service as a convenience for international travelers who may not have a data plan, but it could also be a lifesaver if your phone runs out of juice and you don't have a way to recharge it. A passenger can use the kiosk to enter their destination and desired ride type, then will rece"
+    },
+    {
+        "id": "https://www.engadget.com/social-media/instagram-is-generating-seo-bait-headlines-for-its-users-posts-213702800.html?src=rss",
+        "title": "Instagram is generating SEO-bait headlines for its users' posts",
+        "link": "https://www.engadget.com/social-media/instagram-is-generating-seo-bait-headlines-for-its-users-posts-213702800.html?src=rss",
+        "published": "Tue, 09 Dec 2025 22:08:10 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>It looks like Meta has decided to turn Instagram users into unwitting SEO spam pawns. On Tuesday, <em>404 Media</em> <a class=\"link\" href=\"https://www.404media.co/instagram-is-generating-inaccurate-seo-bait-for-your-posts/\" target=\"_blank\">reported</a> that the platform is generating sensational, likely AI-generated headlines and descriptions for user posts without their knowledge or explicit consent. An Engadget editor has also noticed this on their posts. The headlines are found in the page"
+    },
+    {
+        "id": "https://www.engadget.com/ai/slacks-ceo-is-joining-openai-to-find-the-money-to-pay-for-all-those-data-centers-220411962.html?src=rss",
+        "title": "Slack's CEO is joining OpenAI to find the money to pay for all those data centers",
+        "link": "https://www.engadget.com/ai/slacks-ceo-is-joining-openai-to-find-the-money-to-pay-for-all-those-data-centers-220411962.html?src=rss",
+        "published": "Tue, 09 Dec 2025 22:04:11 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>OpenAI <a class=\"link\" href=\"https://openai.com/index/openai-appoints-denise-dresser/\" target=\"_blank\">has announced</a> that Denise Dresser, the current CEO of Slack, will be the company's new Chief Revenue Officer. Dresser will oversee the company's revenue strategy &quot;across enterprise and customer success,&quot; according to OpenAI's announcement, and will presumably play a key role in leading the company towards profitability now that it's <a class=\"link\" href=\"https://www.engadget.co"
+    },
+    {
+        "id": "https://gizmodo.com/magic-the-gathering-marvel-super-heroes-spoilers-doctor-doom-horn-of-greed-2000697495",
+        "title": "Doctor Doom Will Toot in the Next Marvel \u2018Magic: The Gathering\u2019 Set",
+        "link": "https://gizmodo.com/magic-the-gathering-marvel-super-heroes-spoilers-doctor-doom-horn-of-greed-2000697495",
+        "published": "Tue, 09 Dec 2025 22:00:50 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Magic The Gathering Marvel Super Heroes Horn Of Greed\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/magic-the-gathering-marvel-super-heroes-horn-of-greed.jpg\" width=\"1920\" /><br /><br />He does what he pleases, after all."
+    },
+    {
+        "id": "https://gizmodo.com/newly-discovered-hybrid-phase-of-matter-blurs-the-line-between-solid-and-liquid-2000697462",
+        "title": "Newly Discovered \u2018Hybrid\u2019 Phase of Matter Blurs the Line Between Solid and Liquid",
+        "link": "https://gizmodo.com/newly-discovered-hybrid-phase-of-matter-blurs-the-line-between-solid-and-liquid-2000697462",
+        "published": "Tue, 09 Dec 2025 21:30:34 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Representational Image Of Solid Liquid Metal\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/representational-image-of-solid-liquid-metal-e1765309036815.jpeg\" width=\"1920\" /><br /><br />During this phase, matter exists in a weird, precarious limbo that ultimately determines what it becomes."
+    },
+    {
+        "id": "https://adamj.eu/tech/2025/12/03/django-whats-new-6.0/",
+        "title": "Django: what\u2019s new in 6.0",
+        "link": "https://adamj.eu/tech/2025/12/03/django-whats-new-6.0/",
+        "published": "Tue, 09 Dec 2025 20:33:14 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46210240\">Comments</a>"
     }
 ]
